gurosi/parser/parser.cs
namespace Gurosi;

public sealed class Parser {
    private TokenReader _reader;
    private List<Error> _errors;
    private StatementBlock _runBlock;
    private List<Function> _globalFunctions;
    private List<ClassModel> _classes;
    private List<string> _imports;
    private List<string> _shortens;
    private string _moduleName = "undefined";
    private FunctionIndexer _globalIndexer;
    private GenericList _currentGenericContext;
    private int _memsize;

    public Semantic Parse(string filename, Lexical lexical)
    {
        _reader = new TokenReader(lexical);
        _errors = new List<Error>();
        _runBlock = null;
        _imports = new List<string>();
        _shortens = new List<string>();
        _moduleName = "undefined";
        _globalFunctions = new List<Function>();
        _classes = new List<ClassModel>();
        _globalIndexer = new FunctionIndexer();
        _currentGenericContext = new GenericList();
        _memsize = -1;

        ApplyMacros();

        while (!_reader.EOF)
        {
            Token token = _reader.Read();

            if (token.Type == TokenType.Run)
            {
                if (_runBlock is not null)
                {
                    AddError(ErrorProvider.Parser.RunBlockDuplicate(), _reader.GetCurrent());
                }
                else
                {
                    _runBlock = ParseStatementBlock(root: true);
                }
            }

            if (token.Type == TokenType.Mine)
            {
                // add import
                _reader.Retr();
                string name = ParseImport();
                if (name is not null)
                {
                    _imports.Add(name);
                }
            }

            if (token.Type == TokenType.Shorten)
            {
                // add shortens
                _reader.Retr();
                string name = ParseShorten();
                if (name is not null)
                {
                    _shortens.Add(name);
                }
            }

            if (token.Type == TokenType.Module)
            {
                string name = ParseModuleName();
                if (name is not null)
                {
                    if (_moduleName != "undefined")
                    {
                        AddError(ErrorProvider.Parser.ModuleNameDuplicate(), _reader.GetCurrent());
                    }
                    else
                    {
                        _moduleName = name;
                    }
                }
            }

            if (token.Type == TokenType.Memsize)
            {
                _reader.Retr();
                int size = ParseMemsize();
                if (size != -1)
                {
                    _memsize = int.Max(_memsize, size);
                }
            }

            if (token.Type == TokenType.How)
            {
                _reader.Retr();
                Function function = ParseGlobalFunction();
                if (function is not null)
                    _globalFunctions.Add(function);
            }

            if (token.Type == TokenType.Class)
            {
                _reader.Retr();
                ClassModel classModel = ParseClass();
                if (classModel is not null)
                    _classes.Add(classModel);
            }
        }

        if (_moduleName == "undefined")
        {
            _errors.Add(new Error(ErrorProvider.Parser.ModuleNameMissing(), default));
        }

        if (_moduleName == "sys" || _moduleName == "gen"
            || _moduleName == "arr")
        {
            _errors.Add(new Error(ErrorProvider.Parser.ModuleNameNotAvailable(_moduleName), default));
        }

        Error.AttachFileName(filename, _errors);

        return new Semantic(_errors, new SemanticCode()
        {
            FileName = filename,
            RunBlock = _runBlock,
            ModuleName = _moduleName,
            Imports = _imports,
            Shortens = _shortens.Distinct().ToList(),
            GlobalFunctions = _globalFunctions,
            Classes = _classes,
            MemSize = _memsize != -1 ? _memsize : 1024
        });
    }

    private void ApplyMacros()
    {
        Dictionary<string, SimpleMacro> simpleMacros = ReadSimpleMacros();

        for (int i = 0; i < _reader.Data.Count; i++)
        {
            if (i > 0 && _reader.Data[i].Type == TokenType.Ident &&
                _reader.Data[i-1].Type != TokenType.Macro &&
                simpleMacros.ContainsKey(_reader.Data[i].Value))
            {
                string name = _reader.Data[i].Value;
                _reader.Data.RemoveAt(i);
                _reader.Data.InsertRange(i, simpleMacros[name].Tokens);
            }
        }

        _reader.Seek(0);

        Dictionary<string, TemplateMacro> templateMacros = ReadTemplateMacros();

        _reader.Seek(0);

        ApplyTemplateMacros(templateMacros);

        _reader.Seek(0);
    }

    private void ApplyTemplateMacros(Dictionary<string, TemplateMacro> templateMacros)
    {
        while (!_reader.EOF)
        {
            Token token = _reader.Read();

            if (token.Type == TokenType.Dollar)
            {
                int start = _reader.Position - 1;
                if (EnsureNext(TokenType.Ident))
                    return;
                Token nameToken = _reader.Read();
                
                if (!templateMacros.ContainsKey(nameToken.Value))
                {
                    _errors.Add(new Error(ErrorProvider.Parser.MacroNameNotFound(nameToken.Value), nameToken.Point));
                    return;
                }

                TemplateMacro macro = templateMacros[nameToken.Value];

                if (EnsureNext(TokenType.OpenParen))
                    return;

                _reader.Read(); // '('

                List<List<Token>> arguments = new List<List<Token>>();
                for (int k = 0; k < macro.TemplateCount; k++)
                {
                    //arguments.Add(_reader.Read());
                    int level = 0;
                    List<Token> buffer = new List<Token>();
                    while (!_reader.MatchNext(TokenType.CloseParen))
                    {
                        if(_reader.MatchNext(TokenType.OpenParen))
                        {
                            level++;
                        }

                        if (_reader.MatchNext(TokenType.CloseParen))
                        {
                            if (level <= 0)
                                break;
                            else
                            {
                                level--;
                            }
                        }

                        if (level == 0 && _reader.MatchNext(TokenType.Comma))
                        {
                            break;
                        }

                        buffer.Add(_reader.Read());
                    }
                    arguments.Add(buffer);
                    
                    if (k != macro.TemplateCount - 1)
                    {
                        if (EnsureNext(TokenType.Comma))
                            return;
                        _reader.Read(); // '.'
                    }
                }

                if (EnsureNext(TokenType.CloseParen))
                    return;

                _reader.Read(); // ')'

                int length = _reader.Position - start;

                List<Token> replacements = new List<Token>();

                for (int i = 0; i < macro.Tokens.Count; i++)
                {
                    if (macro.Tokens[i].Type == TokenType.MacroTemplate)
                    {
                        replacements.AddRange(arguments[int.Parse(macro.Tokens[i].Value)]);
                    }
                    else
                    {
                        replacements.Add(macro.Tokens[i]);
                    }
                }

                _reader.Data.RemoveRange(start, length);
                _reader.Data.InsertRange(start, replacements);

                // reparse
                _reader.Seek(start);
            }
        }
    }

    private Dictionary<string, TemplateMacro> ReadTemplateMacros()
    {
        Dictionary<string, TemplateMacro> map = new Dictionary<string, TemplateMacro>();

        try
        {
            while (!_reader.EOF)
            {
                Token token = _reader.Read();

                if (token.Type == TokenType.Macro)
                {
                    if (EnsureNext(TokenType.Ident))
                        return map;
                    Token nameToken = _reader.Read();

                    if (!_reader.MatchNext(TokenType.OpenParen))
                        continue;

                    _reader.Read(); // '('

                    List<string> args = new List<string>();

                    // Parse arguments
                    while (_reader.MatchNext(TokenType.Ident))
                    {
                        Token ident = _reader.Read();
                        args.Add(ident.Value);

                        if (EnsureNext(TokenType.CloseParen, TokenType.Comma))
                            return map;

                        if (_reader.MatchNext(TokenType.CloseParen))
                            break;
                        else if (_reader.MatchNext(TokenType.Comma))
                        {
                            _reader.Read();
                        }

                    }

                    _reader.Read(); // ')'

                    List<Token> tokens = _reader.TakeWhile(x => x.Type != TokenType.Semicolon);

                    for (int i = 0; i < tokens.Count; i++)
                    {
                        if (tokens[i].Type == TokenType.Ident)
                        {
                            int index = args.IndexOf(tokens[i].Value);
                            if (index > -1)
                            {
                                tokens[i] = new Token(index.ToString(), TokenType.MacroTemplate, tokens[i].Point);
                            }
                        }
                    }

                    map[nameToken.Value] = new TemplateMacro(nameToken.Value, tokens, args.Count); 
                }
            }

            return map;
        }
        catch
        {
            _errors.Add(new Error(ErrorProvider.Parser.InvalidSimpleMacro(), default));
            return new Dictionary<string, TemplateMacro>();
        }
    }

    private Dictionary<string, SimpleMacro> ReadSimpleMacros()
    {
        Dictionary<string, SimpleMacro> map = new Dictionary<string, SimpleMacro>();

        try
        {
            while (!_reader.EOF)
            {
                Token token = _reader.Read();

                if (token.Type == TokenType.Macro)
                {
                    if (EnsureNext(TokenType.Ident))
                        return map;
                    Token nameToken = _reader.Read();
                    if (_reader.MatchNext(TokenType.OpenParen))
                        continue;
                    List<Token> tokens = _reader.TakeWhile(x => x.Type != TokenType.Semicolon);
                    _reader.Read();

                    map.TryAdd(nameToken.Value, new SimpleMacro(nameToken.Value, tokens));
                }
            }

            return map;
        }
        catch 
        {
            _errors.Add(new Error(ErrorProvider.Parser.InvalidSimpleMacro(), default));
            return new Dictionary<string, SimpleMacro>();
        }
    }

    private Function ParseGlobalFunction()
    {
        _reader.Read(); // 'how'

        TypeData returnType = ParseType();
        if (returnType is null)
            return null;

        if (EnsureNext(TokenType.Ident))
            return null;

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.OpenParen))
            return null;

        _reader.Read(); // '('

        // read arguments section
        List<DefArgument> args = new List<DefArgument>();

        while (!_reader.EOF && (_reader.MatchNext(TokenType.Ident) || _reader.MatchNext(TokenType.Comma)))
        {
            if (_reader.MatchNext(TokenType.Ident))
            {
                Token argNameToken = _reader.Read();
                if (EnsureNext(TokenType.Colon))
                    return null;
                _reader.Read(); // ':'
                TypeData argType = ParseType();
                if (argType is null)
                    return null;

                args.Add(new DefArgument(argNameToken.Value, argType, argNameToken));
            }
            else if (_reader.MatchNext(TokenType.Comma))
            {
                _reader.Read(); // ','
            }
        }

        if (EnsureNext(TokenType.CloseParen))
            return null;

        _reader.Read(); // ')'

        if (EnsureNext(TokenType.Colon, TokenType.OpenBrace))
            return null;

        TypeData extType = null;
        string extName = null;
        if (_reader.MatchNext(TokenType.Colon))
        {
            _reader.Read();  // ':'

            if (EnsureNext(TokenType.Extend))
                return null;

            (extType, extName) = ParseExtend();
            if (extType is null)
                return null;
        }

        StatementBlock body = ParseStatementBlock();
        if (body is null)
            return null;

        return new Function(_moduleName, nameToken.Value + "~" + _globalIndexer.GetIndex(nameToken.Value), returnType, args, extType, extName, body, nameToken);
    }

    private (TypeData type, string name) ParseExtend()
    {
        _reader.Read(); // 'extend'

        if (EnsureNext(TokenType.LessThan))
            return (null, null);

        _reader.Read();  // '<'

        TypeData type = ParseType();
        if (type is null)
            return (null, null);

        if (EnsureNext(TokenType.GreaterThan))
            return (null, null);

        _reader.Read();  // '>'

        if (EnsureNext(TokenType.Ident))
            return (null, null);

        Token nameToken = _reader.Read();


        return (type, nameToken.Value);
    }

    private MethodModel ParseMethod()
    {
        Token headerToken = _reader.Read(); // 'how'

        TypeData returnType = ParseType();
        if (returnType is null)
            return null;

        if (EnsureNext(TokenType.Ident))
            return null;

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.OpenParen))
            return null;

        _reader.Read(); // '('

        // read arguments section
        List<DefArgument> args = new List<DefArgument>();

        while (!_reader.EOF && (_reader.MatchNext(TokenType.Ident) || _reader.MatchNext(TokenType.Comma)))
        {
            if (_reader.MatchNext(TokenType.Ident))
            {
                Token argNameToken = _reader.Read();
                if (EnsureNext(TokenType.Colon))
                    return null;
                _reader.Read(); // ':'
                TypeData argType = ParseType();
                if (argType is null)
                    return null;

                args.Add(new DefArgument(argNameToken.Value, argType, argNameToken));
            }
            else if (_reader.MatchNext(TokenType.Comma))
            {
                _reader.Read(); // ','
            }
        }

        if (EnsureNext(TokenType.CloseParen))
            return null;

        _reader.Read(); // ')'

        List<AccessIdentifier> identifiers;

        if (EnsureNext(TokenType.OpenBrace, TokenType.Colon))
            return null;
        
        if (_reader.MatchNext(TokenType.OpenBrace))
        {
            // without identifiers (private)
            identifiers = new List<AccessIdentifier>() { AccessIdentifier.Private };
        }
        else
        {
            // with identifiers
            _reader.Read(); // ':'
            identifiers = ParseAccessIdentifiers();
        }

        ValidateMethodIdentifiers(identifiers, headerToken);

        if (EnsureNext(TokenType.OpenBrace))
            return null;

        StatementBlock body = ParseStatementBlock();
        if (body is null)
            return null;

        return new MethodModel(nameToken.Value, returnType, args, body, identifiers, nameToken);
    }

    private ImplModel ParseImpl()
    {
        Token headerToken = _reader.Read(); // 'impl'

        TypeData returnType = ParseType();
        if (returnType is null)
            return null;

        if (EnsureNext(TokenType.Ident))
            return null;

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.OpenParen))
            return null;

        _reader.Read(); // '('

        // read arguments section
        List<DefArgument> args = new List<DefArgument>();
        
        while (!_reader.EOF && (_reader.MatchNext(TokenType.Ident) || _reader.MatchNext(TokenType.Comma)))
        {
            if (_reader.MatchNext(TokenType.Ident))
            {
                Token argNameToken = _reader.Read();
                if (EnsureNext(TokenType.Colon))
                    return null;
                _reader.Read(); // ':'
                TypeData argType = ParseType();
                if (argType is null)
                    return null;

                args.Add(new DefArgument(argNameToken.Value, argType, argNameToken));
            }
            else if (_reader.MatchNext(TokenType.Comma))
            {
                _reader.Read(); // ','
            }
        }

        if (EnsureNext(TokenType.CloseParen))
            return null;

        _reader.Read(); // ')'

        List<AccessIdentifier> identifiers;

        if (EnsureNext(TokenType.OpenBrace, TokenType.Colon))
            return null;

        if (_reader.MatchNext(TokenType.OpenBrace))
        {
            // without identifiers (private)
            identifiers = new List<AccessIdentifier>() { AccessIdentifier.Private };
        }
        else
        {
            // with identifiers
            _reader.Read(); // ':'
            identifiers = ParseAccessIdentifiers();
        }

        ValidateMethodIdentifiers(identifiers, headerToken);

        if (EnsureNext(TokenType.Semicolon))
            return null;

        return new ImplModel(nameToken.Value, returnType, args, identifiers, nameToken);
    }

    private MethodModel ParseConstructor()
    {
        Token token = _reader.Read(); // 'init'

        TypeData returnType = new TypeData(BuiltinTypes.NULL);

        if (EnsureNext(TokenType.OpenParen))
            return null;

        _reader.Read(); // '('

        // read arguments section
        List<DefArgument> args = new List<DefArgument>();

        while (!_reader.EOF && (_reader.MatchNext(TokenType.Ident) || _reader.MatchNext(TokenType.Comma)))
        {
            if (_reader.MatchNext(TokenType.Ident))
            {
                Token argNameToken = _reader.Read();
                if (EnsureNext(TokenType.Colon))
                    return null;
                _reader.Read(); // ':'
                TypeData argType = ParseType();
                if (argType is null)
                    return null;

                args.Add(new DefArgument(argNameToken.Value, argType, argNameToken));
            }
            else if (_reader.MatchNext(TokenType.Comma))
            {
                _reader.Read(); // ','
            }
        }

        if (EnsureNext(TokenType.CloseParen))
            return null;

        _reader.Read(); // ')'

        List<AccessIdentifier> identifiers;

        if (EnsureNext(TokenType.OpenBrace, TokenType.Colon))
            return null;
        
        if (_reader.MatchNext(TokenType.OpenBrace))
        {
            // without identifiers (private)
            identifiers = new List<AccessIdentifier>() { AccessIdentifier.Private };
        }
        else
        {
            // with identifiers
            _reader.Read(); // ':'
            identifiers = ParseAccessIdentifiers();
        }

        ValidateConstructorIdentifiers(identifiers, token);

        if (EnsureNext(TokenType.OpenBrace))
            return null;

        StatementBlock body = ParseStatementBlock();
        if (body is null)
            return null;

        return new MethodModel("ctor", returnType, args, body, identifiers, token);
    }

    private ClassModel ParseClass()
    {
        Token headerToken = _reader.Read(); // 'class'
        FunctionIndexer findexer = new FunctionIndexer();

        if (EnsureNext(TokenType.Ident))
            return null;

        string className  = _reader.Read().Value;

        GenericList genericContext = null;

        if (_reader.MatchNext(TokenType.LessThan))
        {
            genericContext = ParseGenerics();
        }

        _currentGenericContext = genericContext;

        if (EnsureNext(TokenType.Colon, TokenType.OpenBrace))
            return null;

        List<AccessIdentifier> identifiers;
        
        if (_reader.MatchNext(TokenType.Colon))
        {
            // with identifiers
            _reader.Read(); // ':'
            identifiers = ParseAccessIdentifiers();
        }
        else
        {
            // without explicit identifiers (public)
            identifiers = new List<AccessIdentifier>() { AccessIdentifier.Public };
        }

        ValidateClassIdentifiers(identifiers, headerToken);

        TypeData baseType = null;

        // read if inherited
        if (_reader.MatchNext(TokenType.Inherit))
        {
            _reader.Read(); // '<-'

            TypeData type = ParseType();
            if (type is null)
                return null;

            baseType = type;
        }

        if (EnsureNext(TokenType.OpenBrace))
            return null;

        _reader.Read(); // '{'

        List<FieldModel> fields = new List<FieldModel>();
        List<FieldModel> stcFields = new List<FieldModel>();
        List<MethodModel> methods = new List<MethodModel>();
        List<MethodModel> stcMethods = new List<MethodModel>();
        List<ImplModel> absImpls = new List<ImplModel>();

        List<Token> attributeBuffer = new List<Token>();

        while (!_reader.EOF)
        {
            Token token = _reader.Read();

            if (token.Type == TokenType.CloseBrace)
                break;

            if (token.Type == TokenType.AtSign)
            {
                // @
                if (EnsureNext(TokenType.Ident))
                {
                    return null;
                }

                Token attribToken = _reader.Read();
                
                if (!ParserUtil.IsValidAttribute(attribToken.Value))
                {
                    AddError(ErrorProvider.Parser.AttributeNotFound(attribToken.Value), attribToken);
                }
                else
                {
                    attributeBuffer.Add(attribToken);
                }
            }

            if (token.Type == TokenType.Field)
            {
                _reader.Retr();
                FieldModel field = ParseField();

                if (ParserValidator.ValidateFieldAttributes(attributeBuffer, out Error e))
                {
                    AddError(e);
                }
                
                if (field is not null)
                {
                    field.Attributes = ParserUtil.ConvertAttributes(attributeBuffer);
                    GuardFieldDuplicate(fields, field, token);
                    if (field.Identifiers.Contains(AccessIdentifier.Static))
                    {
                        stcFields.Add(field);
                    }
                    else
                    {
                        fields.Add(field);
                    }
                }

                attributeBuffer.Clear();
            }
            else if (token.Type == TokenType.How)
            {
                _reader.Retr();
                MethodModel method = ParseMethod();

                if (method is not null)
                {
                    GuardMethodDuplicate(methods, method, token);
                    method.Name += "~" + findexer.GetIndex(method.Name);
                    if (method.AccessIdentifiers.Contains(AccessIdentifier.Static))
                    {
                        if (ParserValidator.ValidateStaticMethodAttributes(attributeBuffer, out Error e))
                        {
                            AddError(e);
                        }

                        method.Attributes = ParserUtil.ConvertAttributes(attributeBuffer);
                        stcMethods.Add(method);
                    }
                    else
                    {
                        if (ParserValidator.ValidateMethodAttributes(attributeBuffer, out Error e))
                        {
                            AddError(e);
                        }
                        else
                        {
                            ProcessMethodAttributes(attributeBuffer, method, findexer);
                        }

                        method.Attributes = ParserUtil.ConvertAttributes(attributeBuffer);
                        methods.Add(method);
                    }
                }

                attributeBuffer.Clear();
            }
            else if (token.Type == TokenType.Impl)
            {
                _reader.Retr();
                ImplModel impl = ParseImpl();
                if (impl is not null)
                {
                    GuardImplDuplicate(absImpls, impl, token);
                    impl.Name += "~" + findexer.GetIndex(impl.Name);
                    absImpls.Add(impl);
                }

                attributeBuffer.Clear();
            }
            else if (token.Type == TokenType.Init)
            {
                // parse constructor

                _reader.Retr();
                MethodModel constructor = ParseConstructor();
                
                if (constructor is not null)
                {
                    constructor.Name += "~" + findexer.GetIndex(constructor.Name);
                    GuardMethodDuplicate(methods, constructor, token);
                    if (!constructor.AccessIdentifiers.Contains(AccessIdentifier.Static))
                    {
                        methods.Add(constructor);
                    }
                    else
                    {
                        // Error. constructor can't be static.
                        AddError(ErrorProvider.Parser.ConstructorStatic(), token);
                    }
                }

                attributeBuffer.Clear();
            }
        }

        _currentGenericContext = null;

        return new ClassModel()
        {
            Module = _moduleName,
            Name = className,
            Identifiers = identifiers,
            Fields = fields,
            Methods = methods,
            StcFields = stcFields,
            StcMethods = stcMethods,
            AbsImpls = absImpls,
            GenericCount = genericContext is null ? 0 : genericContext.Count,
            BaseType = baseType,
            Token = headerToken
        };
    }

    private void GuardFieldDuplicate(List<FieldModel> fields, FieldModel model, Token token)
    {
        for (int i = 0; i < fields.Count; i++)
        {
            if (fields[i].Name == model.Name)
            {
                AddError(ErrorProvider.Parser.FieldNameDuplicate(model.Name), token);
            }
        }
    }

    private void GuardMethodDuplicate(List<MethodModel> methods, MethodModel model, Token token)
    {
        for (int i = 0; i < methods.Count; i++)
        {
            if (methods[i].Name.TildeEquals(model.Name) &&
                CompileUtil.ArgumentEquals(methods[i].Parameters, model.Parameters))
            {
                AddError(ErrorProvider.Parser.MethodDuplicate(model.Name), token);
            }
        }
    }

    private void GuardImplDuplicate(List<ImplModel> impls, ImplModel model, Token token)
    {
        for (int i = 0; i < impls.Count; i++)
        {
            if (impls[i].Name.TildeEquals(model.Name) &&
                CompileUtil.ArgumentEquals(impls[i].Parameters, model.Parameters))
            {
                AddError(ErrorProvider.Parser.MethodDuplicate(model.Name), token);
            }
        }
    }

    private void ValidateMethodIdentifiers(List<AccessIdentifier> identifiers, Token token)
    {
        for (int i = 0; i < identifiers.Count; i++)
        {
            if (identifiers[i] == AccessIdentifier.Abstract ||
                identifiers[i] == AccessIdentifier.Final)
            {
                AddError(ErrorProvider.Parser.InvalidAccessIdentifier(identifiers[i]), token);
                return;
            }
        }
    }

    private void ValidateConstructorIdentifiers(List<AccessIdentifier> identifiers, Token token)
    {
        for (int i = 0; i < identifiers.Count; i++)
        {
            if (identifiers[i] == AccessIdentifier.Abstract ||
                identifiers[i] == AccessIdentifier.Final ||
                identifiers[i] == AccessIdentifier.Static)
            {
                AddError(ErrorProvider.Parser.InvalidAccessIdentifier(identifiers[i]), token);
                return;
            }
        }
    }

    private void ValidateClassIdentifiers(List<AccessIdentifier> identifiers, Token token)
    {
        for (int i = 0; i < identifiers.Count; i++)
        {
            if (identifiers[i] == AccessIdentifier.Static)
            {
                AddError(ErrorProvider.Parser.InvalidAccessIdentifier(identifiers[i]), token);
                return;
            }
        }
    }

    private void ProcessMethodAttributes(List<Token> attributes, MethodModel model, FunctionIndexer findexer)
    {
        for (int i = 0; i < attributes.Count; i++)
        {
            string a = attributes[i].Value;

            if (a == "indexer_get")
            {
                model.Name = "__get_idx";
                model.Name += "~" + findexer.GetIndex(model.Name);

                // validate
                if (ParserValidator.ValidateIndexerGet(model, out Error e))
                {
                    AddError(e);
                    return;
                }
            }
            if (a == "indexer_set")
            {
                model.Name = "__set_idx";
                model.Name += "~" + findexer.GetIndex(model.Name);

                if (ParserValidator.ValidateIndexerSet(model, out Error e))
                {
                    AddError(e);
                    return;
                }
            }
        }
    }

    private StatementBlock ParseStatementBlock(bool allowOneLiner = false, bool inloop = false, bool root = false)
    {
        Token startToken = _reader.GetCurrent();
        if (allowOneLiner && !_reader.MatchNext(TokenType.OpenBrace))
        {
            Statement s = ParseStatement();

            if (s is null)
                return null;
            else
            {
                return new StatementBlock(new List<Statement>() { s }, startToken);
            }
        }
        else
        {
            if (EnsureNext(TokenType.OpenBrace))
                return null;
        }
        _reader.Read();  // '{'

        List<Statement> statements = new List<Statement>();

        while (!_reader.EOF && !_reader.MatchNext(TokenType.CloseBrace))
        {
            Statement s = ParseStatement();
            if (s is not null)
            {
                
                statements.Add(s);
            }
        }

        _reader.Read(); // '}'

        return new StatementBlock(statements, startToken);
    }

    

    private bool EnsureNext(TokenType expected)
    {
        if (_reader.EOF || !_reader.MatchNext(expected))
        {
            _errors.Add(new Error(ErrorProvider.Parser.InvalidToken(_reader.GetCurrent().Value, expected.ToString()), _reader.GetCurrent().Point));
            return true;
        }

        return false;
    }

    private bool EnsureNext(params TokenType[] expecteds)
    {
        if (expecteds.All(x => !_reader.MatchNext(x)))
        {
            _errors.Add(new Error(ErrorProvider.Parser.InvalidToken(_reader.GetCurrent().Value, string.Join(", ", expecteds)), _reader.GetCurrent().Point));
            return true;
        }

        return false;
    }

    private void AddError(Error error)
    {
        _errors.Add(error);
    }

    private void AddError(string msg)
    {
        Token current = _reader.GetCurrent();
        if (current is null)
            AddError(msg, current);
        else
            AddError(msg, _reader.GetOffset(-1));
    }

    private void AddError(string msg, Token source)
    {
        _errors.Add(new Error(msg, source.Point));
    }



    private LetStatement ParseLetStatement()
    {
        Token rootToken = _reader.Read(); // 'let'

        if (EnsureNext(TokenType.Ident))
            return null;

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.Colon))
            return null;

        _reader.Read();

        TypeData type = ParseType();
        if (type is null)
            return null;

        if (EnsureNext(TokenType.Semicolon, TokenType.Assign))
            return null;
        
        if (_reader.MatchNext(TokenType.Semicolon))
        {
            _reader.Read();
            return new LetStatement(nameToken.Value, type, rootToken);
        }

        _reader.Read();

        Expression value = ParseExpression();

        if (EnsureNext(TokenType.Semicolon))
            return null;

        _reader.Read();

        return new LetStatement(nameToken.Value, type, value, rootToken);
    }

    private ConstStatement ParseConstStatement()
    {
        Token rootToken = _reader.Read(); // 'const'

        if (EnsureNext(TokenType.Ident))
            return null;

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.Colon))
            return null;

        _reader.Read();

        TypeData type = ParseType();
        if (type is null)
            return null;

        if (EnsureNext(TokenType.Semicolon, TokenType.Assign))
            return null;
        
        if (_reader.MatchNext(TokenType.Semicolon))
        {
            _reader.Read();
            AddError(ErrorProvider.Parser.ConstValueMissing(), rootToken);
            return null;
        }

        _reader.Read();

        Expression value = ParseExpression();

        if (EnsureNext(TokenType.Semicolon))
            return null;

        _reader.Read();

        return new ConstStatement(nameToken.Value, type, value, rootToken);
    }

    private string ParseModuleName()
    {
        if (EnsureNext(TokenType.Ident))
        {
            return null;
        }

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.Semicolon))
        {
            return null;
        }

        _reader.Read(); // ';'

        return nameToken.Value;
    }

    private string ParseImport()
    {
        _reader.Read(); // 'mine'

        if (EnsureNext(TokenType.Ident, TokenType.StringLiteral))
        {
            return null;
        }

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.Semicolon))
        {
            return null;
        }

        _reader.Read(); // ';'

        return nameToken.Value;
    }

    private string ParseShorten()
    {
        _reader.Read(); // 'shorten'

        if (EnsureNext(TokenType.Ident))
        {
            return null;
        }

        Token nameToken = _reader.Read();

        if (EnsureNext(TokenType.Semicolon))
        {
            return null;
        }

        _reader.Read(); // ';'

        return nameToken.Value;
    }

    private int ParseMemsize()
    {
        _reader.Read(); // 'memsize'

        if (EnsureNext(TokenType.IntLiteral))
        {
            return -1;
        }

        Token valueToken = _reader.Read();
        int actualValue = int.Parse(valueToken.Value);

        if (actualValue < 32)
        {
            AddError(ErrorProvider.Parser.InvalidMemorySize(actualValue), valueToken);
            return -1;
        }

        return actualValue;
    }

    private TypeData ParseType()
    {
        if (_reader.MatchNext(TokenType.String))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.STRING);
        }
        else if (_reader.MatchNext(TokenType.Int))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.INT);
        }
        else if (_reader.MatchNext(TokenType.Float))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.FLOAT);
        }
        else if (_reader.MatchNext(TokenType.Double))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.DOUBLE);
        }
        else if (_reader.MatchNext(TokenType.Boolean))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.BOOLEAN);
        }
        else if (_reader.MatchNext(TokenType.Any))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.ANY);
        }
        else if (_reader.MatchNext(TokenType.FuncPtr))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.FUNC_PTR);
        }
        else if (_reader.MatchNext(TokenType.Void))
        {
            _reader.Read();
            return new TypeData(BuiltinTypes.NULL);
        }
        else if (_reader.MatchNext(TokenType.Array))
        {
            _reader.Read(); // 'array'
            if (EnsureNext(TokenType.LessThan))
            {
                return null;
            }

            _reader.Read(); // '<'

            TypeData innerType = ParseType();
            if (innerType is null)
                return null;
            
            if (EnsureNext(TokenType.GreaterThan))
            {
                return null;
            }

            _reader.Read(); // '>'

            return new TypeData(innerType);
        }
        else if (_reader.MatchNext(TokenType.LessThan))
        {
            _reader.Read();  // '<'

            if (EnsureNext(TokenType.Ident))
                return null;

            Token nameToken = _reader.Read();

            if (EnsureNext(TokenType.GreaterThan))
                return null;

            _reader.Read();  // '>'

            if (_currentGenericContext is null)
            {
                AddError(ErrorProvider.Parser.InvalidGenericType(), nameToken);
                return null;
            }

            int index = _currentGenericContext.GetIndex(nameToken.Value);
            
            if (index == -1)
            {
                AddError(ErrorProvider.Parser.InvalidGenericType(), nameToken);
                return null;
            }

            return TypeData.CreateGeneric(index);
        }
        else if (_reader.MatchNext(TokenType.Arrbase))
        {
            Token arrbaseToken = _reader.Read();

            return TypeData.CreateArrayBase();
        }
        else
        {
            Expression type = ParseSymbolExpression();

            if (type is not IdentExpression && type is not DotExpression &&
                type is not GenericExpression)
            {
                AddError(ErrorProvider.Parser.InvalidType());
                return null;
            }

            return new TypeData(type);
        }
    }

    private List<AccessIdentifier> ParseAccessIdentifiers()
    {
        List<AccessIdentifier> buffer = new List<AccessIdentifier>();

        while (_reader.MatchNext(TokenType.Public) ||
                _reader.MatchNext(TokenType.Private) ||
                _reader.MatchNext(TokenType.Moduled) ||
                _reader.MatchNext(TokenType.Static) ||
                _reader.MatchNext(TokenType.Abstract))
        {
            Token token = _reader.Read();
